# project-recommendor

./: .env.sample  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  tasks.py  temp.py
config/: logger.py  mongo.py  postgres.py
db/mongo/models/: base_model.py  recommendation.py
db/mongo/schemas/: recommendation.py
db/postgres/models/: base_model.py  recommendation.py
services/: base_service.py  google_service.py  groq_service.py  huggingface_service.py  openai_service.py  openrouter_service.py
utils/: constants.py  generate_recommendations.py  recommendations_helper.py  services.yaml
utils/frontend/public/: index.html
utils/helpers/: corenest.py  recommendations_helper.py  sheets.py  streamlit_helper.py
utils/markdown_template/: idea_template.txt
utils/migrations/: mongo_to_sheets.py
utils/prompts/: system_prompt.txt  user_prompt.txt
utils/streamlit/: gui.py
utils/streamlit/templates/: idea.md
utils/tasks/: one_time_tasks.py
